--- a/Views/css/styleFC.css
+++ b/Views/css/styleFC.css
@@ -2,3 +2,12 @@
     background-color: gray;
     width: 70%;
 }
+
+table.table {
+  margin: auto;
+width: 50%;
+}
+
+tr {
+    border-bottom: #f9f8f8 1px solid;
+}
