--- a/Views/css/frm_persona_individual_add.css
+++ b/Views/css/frm_persona_individual_add.css
@@ -39,5 +39,28 @@
 }
 
 .cancelar_booton.submit_booton{
-    background-color: red;
+  background-color: #af2f31;
+  background: -webkit-gradient(linear, left top, left bottom, from(#af2f31), to(#a51719));
+  background: -webkit-linear-gradient(top, #af2f31, #a51719);
+  background: -moz-linear-gradient(top, #af2f31, #a51719);
+  background: -ms-linear-gradient(top, #af2f31, #a51719);
+  background: -o-linear-gradient(top, #af2f31, #a51719);
+  background: linear-gradient(top, #af2f31, #a51719);
+  border: 1px solid #a51719;
+  border-bottom: 1px solid #a51719;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  box-shadow: inset 0 1px 0 0 #ed8787;
+  -webkit-box-shadow: 0 1px 0 0 #ed8787 inset ;
+  -moz-box-shadow: 0 1px 0 0 #ed8787 inset;
+  -ms-box-shadow: 0 1px 0 0 #ed8787 inset;
+  -o-box-shadow: 0 1px 0 0 #ed8787 inset;
+  color: white;
+  font-weight: bold;
+  padding: 6px 20px;
+  text-align: center;
+  text-shadow: 0 -1px 0 #396715;
 }
