--- a/Views/css/frm_persona_individual_add.css
+++ b/Views/css/frm_persona_individual_add.css
@@ -93,3 +93,9 @@ body{
   text-align: center;
   text-shadow: 0 -1px 0 #396715;
 }
+
+footer{
+	width: 100%;
+	height: 5%;
+	background-color: #57b846;
+}
