--- a/Views/css/frm_principal.css
+++ b/Views/css/frm_principal.css
@@ -17,7 +17,7 @@ color: white;
 }
 
 footer {
-background-color: green;
+background-color: #57b846;
 	}
 
 .nav_main{
@@ -83,4 +83,10 @@ nav >ul >li >ul {
 nav ul ul ul {
 	left: 100%;
 	top: 0;
+}
+
+footer{
+	width: 100%;
+	height: 10%;
+	background-color: #57b846;
 }
