--- a/Views/css/frm_evaluar_pregunta.css
+++ b/Views/css/frm_evaluar_pregunta.css
@@ -2,3 +2,153 @@
     color: rgb(255,255,255);
     border: 0;
 }
+
+html, body{
+  width: 100%;
+  height: 100%;
+}
+.content_pregunta{
+  width: 90%;
+  background-color: green;
+  height: 40%;
+  margin: auto;
+}
+
+.box_pregunta{
+  width: 14%;
+  background-color: #57b846;
+  float: left;
+  margin-right: 2%;
+  border: 1px solid #57b846;
+  height: 100px;
+  text-align: center;
+  padding-bottom: 2%;
+  border-radius: 5px;
+}
+
+.subtitle_respuesta{
+  width: 100%;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  height: 50%;
+}
+
+.box_pregunta:hover{
+    box-shadow: 2px 2px 5px #999;
+}
+
+.subtitle_respuesta:hover{
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.main_content_eva{
+  width: 98%;
+  margin-top: 12%;
+  height: 400px;
+  background-color: #7c7777;
+  box-shadow: 2px 2px 5px #7b7b7c;
+  padding-top: 3%;
+  border-radius: 5px;
+}
+
+.content_evaluacion{
+  width: 95%;
+  height: 55%;
+  border: 2px solid white;
+  margin: auto ;
+  margin-bottom: 2%;
+  background-color: #d3cdcd;
+  border-radius: 5px;
+}
+
+.title_enunciado{
+  width: 100%;
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.title_enunciado h4{
+  width: 25%;
+  margin: auto;
+  padding-top: 2%;
+}
+
+.body_enunciado{
+  height: 80%;
+    width: 100%;
+    font-size: 21px;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 2%;
+
+}
+
+.content_respuesta{
+  width: 95%;
+  height: 30%;
+  border: 2px solid white;
+  margin: auto ;
+  background-color: #d3cdcd;
+  border-radius: 5px;
+}
+
+.body_enunciado_res{
+  height: 30%;
+    width: 100%;
+    font-size: 21px;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 2%;
+}
+
+.respuesta{
+  height: 100%;
+  font-size: 20px;
+}
+
+.title_enunciado_res{
+  width: 100%;
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.title_enunciado_res h4{
+  width: 10%;
+  margin: auto;
+  padding-top: 2%;
+}
+
+.input_content_eva{
+  width: 98%;
+  height: 13%;
+}
+
+.input_evaluacion{
+  width: 100%;
+  height: 100%;
+  background-color: #57b846;
+  font-size: 18px;
+  text-align: center;
+  border: 1px solid green;
+  box-shadow: 2px 2px 5px #57b846;
+  border-radius: 5px;
+}
+
+.input_evaluacion:hover{
+  background-color: #86cc7a;
+  font-size: 21px;
+  text-align: center;
+}
+
+.body_enunciado_button{
+  height: 30%;
+    width: 18%;
+    font-size: 21px;
+    font-weight: 400;
+    text-align: center;
+    padding-top: 2%;
+    float: left;
+}
