--- a/Views/css/validar_evaluacion.css
+++ b/Views/css/validar_evaluacion.css
@@ -2,3 +2,74 @@
     color: rgb(255,255,255);
     border: 0;
 }
+html,body{
+  width: 100%;
+  height: 100%;
+}
+
+.form_validar_eva{
+  width: 100%;
+  height: 100%;
+}
+
+.content_confirm{
+  margin: auto;
+  padding-top: 2%;
+  width: 70%;
+  height: 70%;
+  background-color: #57b846;
+  border-radius: 50%;
+}
+
+.subcontent_confirm{
+  width: 90%;
+  height: 90%;
+  margin: auto;
+  background-color: #d3cdcd;
+  border-radius: 50%;
+  padding-top: 1%;
+}
+
+.button_confirm{
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  margin-top: 2%;
+  border-radius: 50%;
+}
+
+.con_evaluacion{
+width: 100%;
+height: 100%;
+margin-top: 30%;
+border-radius: 50%;
+background-color: green;
+border: 1px solid black;
+color: white;
+font-weight: 800;
+}
+.con_evaluacion:hover{
+background-color: #57b846;
+border: 1px solid black;
+box-shadow: 2px 2px 5px black;
+}
+
+p{
+  width: 70%;
+  margin: auto;
+  height: 15%;
+  text-align: center;
+}
+
+.title_confirm h1{
+  width: 20%;
+  margin-bottom: 5%;
+  height: 5%;
+  margin: auto;
+}
+
+.title_confirm {
+  
+  margin-bottom: 5%;
+
+}
